--- a/normalize.less
+++ b/normalize.less
@@ -1,22 +1,8 @@
-/*! normalize.less v2.0.1 | git.io/normalize-less | @reitermarkus */
+// ! normalize.css v2.1.3 | MIT License | git.io/normalize
 
-// Standard fonts to be used.
-@standard-font: sans-serif;
-@monospace-font: monospace, serif;
-
-// Color for the ‘mark’ element.
-@mark-bg: #ff0;
-@mark-color: #000;
-
-// Border color for fieldsets.
-@fieldset-border: #c0c0c0;
-
-
-// ============================
-//  HTML5 display definitions =
-// ============================
-
-// Correct ‘block’ display not defined in IE 8-9.
+// ==========================================================================
+//   HTML5 display definitions
+// ==========================================================================
 article,
 aside,
 details,
@@ -25,262 +11,287 @@ figure,
 footer,
 header,
 hgroup,
+main,
 nav,
 section,
 summary {
-  display: block;
+	// Correct `block` display not defined in IE 8/9.
+	display: block;
 }
 
-// Correct ‘inline-block’ display not defined in IE 8-9.
 audio,
 canvas,
 video {
-  display: inline-block;
+	// Correct `inline-block` display not defined in IE 8/9.
+	display: inline-block;
 }
 
-// Prevent modern browsers from displaying ‘audio’ without controls and remove excess height in iOS 5 devices.
 audio:not([controls]) {
-  display: none;
-  height: 0;
+	// Prevent modern browsers from displaying `audio` without controls.
+	// Remove excess height in iOS 5 devices.
+	display: none;
+	height: 0;
 }
 
-// Address styling for ‘hidden’ attribute absent in IE 8-9.
-[hidden] {
-  display: none;
+[hidden],
+template {
+	// Address `[hidden]` styling not present in IE 8/9.
+	// Hide the `template` element in IE, Safari, and Firefox < 22.
+	display: none;
 }
 
-
-// ============================
-//  Base                      =
-// ============================
-
-// 1. Set default font family to ‘sans-serif’.
-// 2. Prevent iOS text size adjust after orientation change, without disabling user zoom.
+// ==========================================================================
+//   Base
+// ==========================================================================
 html {
-  font-family: @standard-font; // 1
-  -webkit-text-size-adjust: 100%; // 2
-  -ms-text-size-adjust: 100%; // 2
+	// Set default font family to sans-serif.
+	font-family: sans-serif;
+
+	// Prevent iOS text size adjust after orientation change, without disabling user zoom.
+	-webkit-text-size-adjust: 100%;
+		-ms-text-size-adjust: 100%;
 }
 
-// Remove default margin.
 body {
-  margin: 0;
+	// Remove default margin.
+	margin: 0;
 }
 
+// ==========================================================================
+//   Links
+// ==========================================================================
+a {
+	// Remove the gray background color from active links in IE 10.
+	background: transparent;
 
-// ============================
-//   Links                    =
-// ============================
+	&:focus {
+		// Address `outline` inconsistency between Chrome and other browsers.
+		outline: thin dotted;
+	}
 
-// Address ‘outline’ inconsistency between Chrome and other browsers.
-a:focus {
-  outline: thin dotted;
-}
+	&:active,
+	&:hover {
+		// Improve readability when focused and also mouse hovered in all browsers.
+		outline: 0;
+	}
 
-// Improve readability when focussed or hovered in all browsers.
-a:active,
-a:hover {
-  outline: 0;
-}
-
-
-// ============================
-//  Typography                =
-// ============================
-
-// Address ‘h1’ font sizes within ‘section’ and ‘article’ in Firefox 4+, Safari 5 and Chrome.
+// ==========================================================================
+//   Typography
+// ==========================================================================
 h1 {
-  font-size: 2em;
+	// Address variable `h1` font-size and margin within `section` and `article` contexts in Firefox 4+, Safari 5, and Chrome.
+	font-size: 2em;
+	margin: 0.67em 0;
 }
 
-// Address styling absent in IE 8-9, Safari 5 and Chrome.
 abbr[title] {
-  border-bottom: 1px dotted;
+	// Address styling not present in IE 8/9, Safari 5, and Chrome.
+	border-bottom: 1px dotted;
 }
 
-// Address style set to ‘bolder’ in Firefox 4+, Safari 5 and Chrome.
 b,
 strong {
-  font-weight: bold;
+	// Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
+	font-weight: bold;
 }
 
-// Address styling absent in Safari 5 and Chrome.
 dfn {
-  font-style: italic;
+	// Address styling not present in Safari 5 and Chrome.
+	font-style: italic;
 }
 
-// Address styling absent in IE 8-9.
+hr {
+	// Address differences between Firefox and other browsers.
+	-moz-box-sizing: content-box;
+		 box-sizing: content-box;
+	height: 0;
+}
+
 mark {
-  background: @mark-bg;
-  color: @mark-color;
+	// Address styling not present in IE 8/9.
+	background: #ff0;
+	color: #000;
 }
 
-// Correct font family set oddly in Safari 5 and Chrome.
 code,
 kbd,
 pre,
 samp {
-  font-family: @monospace-font;
-  font-size: 1em;
+	// Correct font family set oddly in Safari 5 and Chrome.
+	font-family: monospace, serif;
+	font-size: 1em;
 }
 
-// Improve readability of pre-formatted text in all browsers.
 pre {
-  white-space: pre;
-  white-space: pre-wrap;
-  word-wrap: break-word;
+	// Improve readability of pre-formatted text in all browsers.
+	white-space: pre-wrap;
 }
 
-// Set consistent quote types.
 q {
-  quotes: "\201C" "\201D" "\2018" "\2019";
+	// Set consistent quote types.
+	quotes: "\201C" "\201D" "\2018" "\2019";
 }
 
-// Address inconsistent and variable font size in all browsers.
 small {
-  font-size: 80%;
+	// Address inconsistent and variable font size in all browsers.
+	font-size: 80%;
 }
 
-// Prevent ‘sub’ and ‘sup’ affecting ‘line-height’ in all browsers.
 sub,
 sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
+	// Prevent `sub` and `sup` affecting `line-height` in all browsers.
+	font-size: 75%;
+	line-height: 0;
+	position: relative;
+	vertical-align: baseline;
 }
 
 sup {
-    top: -0.5em;
+	top: -0.5em;
 }
 
 sub {
-    bottom: -0.25em;
+	bottom: -0.25em;
 }
 
-
-// ============================
-//  Embedded content          =
-// ============================
-
-// Remove border when inside ‘a’ element in IE 8-9.
+// ==========================================================================
+//   Embedded content
+// ==========================================================================
 img {
-  border: 0;
+	// Remove border when inside `a` element in IE 8/9.
+	border: 0;
 }
 
-// Correct overflow displayed oddly in IE 9.
 svg:not(:root) {
-  overflow: hidden;
+	// Correct overflow displayed oddly in IE 9.
+	overflow: hidden;
 }
 
-
-// ============================
-//  Figures                   =
-// ============================
-
-// Address margin absent in IE 8-9 and Safari 5.
+// ==========================================================================
+//   Figures
+// ==========================================================================
 figure {
-  margin: 0;
+	// Address margin not present in IE 8/9 and Safari 5.
+	margin: 0;
 }
 
-
-// ============================
-//  Forms                     =
-// ============================
-
-// Define consistent border, margin and padding.
+// ==========================================================================
+//   Forms
+// ==========================================================================
 fieldset {
-  border: 1px solid @fieldset-border;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
+	// Define consistent border, margin, and padding.
+	border: 1px solid #c0c0c0;
+	margin: 0 2px;
+	padding: 0.35em 0.625em 0.75em;
 }
 
-// 1. Correct color not being inherited in IE 8-9.
-// 2. Remove padding so people aren't caught out if they zero out fieldsets.
 legend {
-  border: 0; // 1
-  padding: 0; // 2
+	// Correct `color` not being inherited in IE 8/9.
+	border: 0;
+
+	// Remove padding so people aren't caught out if they zero out fieldsets.
+	padding: 0;
 }
 
-// 1. Correct font family not being inherited in all browsers.
-// 2. Correct font size not being inherited in all browsers.
-// 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome
 button,
 input,
 select,
 textarea {
-  font-family: inherit; // 1
-  font-size: 100%; // 2
-  margin: 0; // 3
+	// Correct font family not being inherited in all browsers.
+	font-family: inherit;
+
+	// Correct font size not being inherited in all browsers.
+	font-size: 100%;
+
+	// Address margins set differently in Firefox 4+, Safari 5, and Chrome.
+	margin: 0;
 }
 
-// Address Firefox 4+ setting ‘line-height’ on ‘input’ using ‘!important’ in the UA stylesheet.
 button,
 input {
-  line-height: normal;
+	// Address Firefox 4+ setting `line-height` on `input` using `!important` in the UA stylesheet.
+	line-height: normal;
 }
 
-// 1. Avoid the WebKit bug in Android 4.0.* where (2) destroy native ‘audio’ and ‘video’ controls.
-// 2. Correct inability to style clickable ‘input’ types in iOS.
-// 3. Improve usability and consistency of cursor style between image-type ‘input’ and others.
+
 button,
-html input[type="button"], // 1
+select {
+	// Address inconsistent `text-transform` inheritance for `button` and `select`.
+	// All other form control elements do not inherit `text-transform` values.
+	// Correct `button` style inheritance in Chrome, Safari 5+, and IE 8+.
+	// Correct `select` style inheritance in Firefox 4+ and Opera.
+	text-transform: none;
+}
+
+// Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio` and `video` controls.
+html input[type="button"],
+button,
 input[type="reset"],
 input[type="submit"] {
-  -webkit-appearance: button; // 2
-  cursor: pointer; // 3
+	// Correct inability to style clickable `input` types in iOS.
+	-webkit-appearance: button;
+
+	// Improve usability and consistency of cursor style between image-type `input` and others.
+	cursor: pointer;
 }
 
-// Re-set default cursor for disabled elements.
-button[disabled],
-input[disabled] {
-  cursor: default;
+button,
+html input {
+	&[disabled] {
+		// Re-set default cursor for disabled elements.
+		cursor: default;
+	}
 }
 
-// 1. Addresses box sizing set to ‘content-box’ in IE 8-9.
-// 2. Removes excess padding in IE 8-9.
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
+input {
+	&[type="checkbox"],
+	&[type="radio"] {
+		// Address box sizing set to `content-box` in IE 8/9/10.
+		box-sizing: border-box;
+
+		// Remove excess padding in IE 8/9/10.
+		padding: 0;
+	}
+
+	&[type="search"] {
+		// Address `appearance` set to `searchfield` in Safari 5 and Chrome.
+		-webkit-appearance: textfield;
+
+		// Address `box-sizing` set to `border-box` in Safari 5 and Chrome (include `-moz` to future-proof).
+		-webkit-box-sizing: content-box;
+		   -moz-box-sizing: content-box;
+				box-sizing: content-box;
+
+		&::-webkit-search-cancel-button,
+		&::-webkit-search-decoration {
+			// Remove inner padding and search cancel button in Safari 5 and Chrome on OS X.
+			-webkit-appearance: none;
+		}
+	}
 }
 
-// 1. Addresses ‘appearance’ set to ‘searchfield’ in Safari 5 and Chrome.
-// 2. Addresses ‘box-sizing’ set to ‘border-box’ in Safari 5 and Chrome (include ‘-moz’ to future-proof).
-input[type="search"] {
-  -webkit-appearance: textfield; // 1
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box; // 2
-  box-sizing: content-box;
+button,
+input {
+	&::-moz-focus-inner {
+		// Remove inner padding and border in Firefox 4+.
+		border: 0;
+		padding: 0;
+	 }
 }
 
-// Removes inner padding and search cancel button in Safari 5 and Chrome on OS X.
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-// Removes inner padding and border in Firefox 4+.
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-
-// 1. Removes default vertical scrollbar in IE 8-9.
-// 2. Improves readability and alignment in all browsers.
 textarea {
-  overflow: auto; // 1
-  vertical-align: top; // 2
+	// Remove default vertical scrollbar in IE 8/9.
+	overflow: auto;
+
+	// Improve readability and alignment in all browsers.
+	vertical-align: top;
 }
 
-
-// ============================
-//  Tables                    =
-// ============================
-
-// Remove most spacing between table cells.
+// ==========================================================================
+//   Tables
+// ==========================================================================
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+	//  Remove most spacing between table cells.
+	border-collapse: collapse;
+	border-spacing: 0;
 }
