un derping the derp
fixing a stupidly unclosed tag.
this is what happens when i make things tipsy.

--- a/normalize.less
+++ b/normalize.less
@@ -74,6 +74,7 @@ a {
 		// Improve readability when focused and also mouse hovered in all browsers.
 		outline: 0;
 	}
+}
 
 // ==========================================================================
 //   Typography
