--- a/normalize.less
+++ b/normalize.less
@@ -1,4 +1,5 @@
 // ! normalize.css v2.1.3 | MIT License | git.io/normalize
+// Ported by Markus Reiter / Richard Bailey
 
 // ==========================================================================
 //   HTML5 display definitions
